<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".LoginActivity"
    android:paddingTop="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp"
    android:background="#FFF">


    <ImageView
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="60dp"
        android:layout_width="244dp"
        android:layout_height="79dp"
        android:src="@drawable/logo_2"
        />
    <TextView
        android:textColor="@color/colorOgin"
        android:text="@string/username"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:textSize="14sp"
        android:layout_height="19dp" />
     <EditText
         android:backgroundTint="@color/colorOgin"
         android:id="@+id/edtUserNam"
         android:textColorHint="@color/colorTextHint"
         android:textColor="@color/colorOgin"
         android:textSize="10sp"
         android:text="admin"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="@string/username1"/>



    <TextView
        android:textColor="@color/colorOgin"
        android:text="@string/password"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:textSize="14sp"
        android:layout_height="19dp" />
    <EditText
        android:backgroundTint="@color/colorOgin"
        android:id="@+id/edtPassWord"
        android:inputType="textPassword"
        android:text="admin123"
        android:textColorHint="@color/colorTextHint"
        android:textColor="@color/colorOgin"
        android:textSize="10sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/ckbRememberPassword"
            android:checked="true"
            android:shadowColor="@color/colorOgin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

        <TextView
            android:textColor="@color/colorOgin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:text="@string/nho_mat_khau"/>
    </LinearLayout>

    <Button
        android:onClick="DangNhap"
        android:text="Đăng nhập"
        android:textAllCaps="false"
        android:textColor="#FFF"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/style1"/>

    <TextView
        android:id="@+id/txtForgotpassword"
        android:textColor="@color/colorOgin"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:textSize="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/quen_mat_khau"/>

    <TextView
        android:id="@+id/txtContact"
        android:textColor="@color/colorOgin"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:textSize="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lien_he"/>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/flbForMatText"
        android:layout_gravity="right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        />






</LinearLayout>